--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_API_BASE_URL=https://adorable-gentleness-production.up.railway.app
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_CLARITY_ID=xxxxxxxxxx
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyD-XXXXXXXXXX
