--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "react-redux": "^8.1.3",
     "react-simple-chatbot": "^0.5.0",
     "react-simple-star-rating": "^5.1.7",
-    
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-timer-hook": "^3.0.7",
@@ -54,13 +53,16 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^10.1.5",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.2.4",
     "prettier": "^3.6.0",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
