--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@types/styled-components": "^5.1.34",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^12.18.1",
@@ -37,7 +38,7 @@
     "react-range": "^1.8.14",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
-    "react-simple-chatbot": "^0.5.0",
+    "react-simple-chatbot": "^0.5.3",
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
@@ -47,7 +48,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.3.11",
     "swiper": "^11.2.8",
     "yup": "^1.6.1"
   },
