--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -26,6 +27,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
