--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-range": "^1.8.14",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
-    "react-simple-chatbot": "^0.5.3",
+    "react-simple-chatbot": "^0.5.0",
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
@@ -64,11 +64,12 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@next/bundle-analyzer": "^15.3.5",
+    "@types/node": "^24.0.14",
     "@types/styled-components": "^4.4.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.21",
-    "critters-webpack-plugin": "^3.0.2",
+    "critters-webpack-plugin": "^2.5.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^10.1.5",
